@@ -7,12 +7,19 @@ import kroryi.bus2.dto.lost.LostItemListResponseDTO;
 import kroryi.bus2.dto.lost.LostItemRequestDTO;
 import kroryi.bus2.dto.lost.LostItemResponseDTO;
 import kroryi.bus2.entity.lost.LostItem;
+import kroryi.bus2.entity.user.User;
+import kroryi.bus2.repository.jpa.LostItemRepository;
+import kroryi.bus2.repository.jpa.UserRepository;
 import kroryi.bus2.service.lost.LostItemService;
+import kroryi.bus2.service.user.UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Tag(name = "분실물-일반", description = "")
 @RestController
@@ -21,6 +28,9 @@ import java.util.List;
 public class LostItemController {
 
     private final LostItemService lostItemService;
+    private final UserRepository userRepository;
+    private final LostItemRepository lostItemRepository;
+
 
     @Operation(summary = "분실물 등록", description = "일반회원이 분실물을 등록합니다.")
     @PostMapping
@@ -33,16 +43,13 @@ public class LostItemController {
     @Operation(summary = "전체 분실물 조회 (노출용)", description = "일반회원이 볼 수 있도록 숨김/삭제 제외한 분실물 목록을 조회합니다.")
     @GetMapping("/visible")
     public ResponseEntity<List<LostItemListResponseDTO>> getVisibleLostItems() {
-        List<LostItemListResponseDTO> result = lostItemService.getAllLostItemsVisibleOnly()
-                .stream()
-                .map(item -> LostItemListResponseDTO.builder()
-                        .id(item.getId())
-                        .title(item.getTitle())
-                        .busNumber(item.getBusNumber())
-                        .lostTime(item.getLostTime())
-                        .build())
-                .toList();
-        return ResponseEntity.ok(result);
+        List<LostItem> items = lostItemRepository.findByDeletedFalseAndVisibleTrue();
+
+        List<LostItemListResponseDTO> response = items.stream()
+                .map(LostItemListResponseDTO::fromEntity)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(response);
     }
 
     // 🔸 단건 조회
@@ -54,7 +61,7 @@ public class LostItemController {
     }
 
     @Operation(summary = "분실물 수정", description = "일반회원이 등록한 분실물 정보를 수정합니다.")
-    @PutMapping("/api/lost/{id}")
+    @PutMapping("/{id}")
     public ResponseEntity<Void> updateLostItem(@PathVariable Long id,
                                                @RequestBody LostItemRequestDTO dto) {
         lostItemService.updateLostItem(id, dto);
@@ -62,9 +69,26 @@ public class LostItemController {
     }
 
     @Operation(summary = "분실물 삭제", description = "일반회원이 등록한 분실물을 삭제합니다.")
-    @DeleteMapping("/api/lost/{id}")
+    @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteLostItem(@PathVariable Long id) {
         lostItemService.deleteLostItem(id); // 내부에서는 soft delete
         return ResponseEntity.noContent().build();
     }
+    // LostItemController.java
+
+    @Operation(summary = "내가 등록한 분실물 목록 조회")
+    @GetMapping
+    public ResponseEntity<List<LostItemResponseDTO>> getMyLostItems() {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        String userId = auth.getName();  // 로그인한 사용자의 userId (username)
+
+        User user = userRepository.findByUserId(userId)
+                .orElseThrow(() -> new RuntimeException("사용자 정보를 찾을 수 없습니다."));
+
+        List<LostItemResponseDTO> myItems = lostItemService.getMyLostItems(user.getId());
+        return ResponseEntity.ok(myItems);
+    }
+
+
+
 }
